Fixed courses spacing error

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -406,6 +406,9 @@ hr.courses {
   flex: content;
 }
 
+fixed-course-width {
+  width: auto!important;
+}
 /*============= EDIT COURSES =============*/
 
 .edit-course {
